# Kiyoshi-AI-OS

./: .gitignore  Cargo.toml  README.md  jest.config.ts  package.json  tsconfig.json
docs/: ARCHITECTURE.md  INSTALLATION.md  PHASES.md
src/: diagnostics.rs  lib.rs  main.rs  metrics.rs  stability.rs  verification.rs
src/__tests__/core/: event-bus.test.ts  kernel.test.ts  nae.test.ts  scheduler.test.ts  stability.test.ts  verification.test.ts
src/__tests__/engineering/: code-generation-engine.test.ts  debugger.test.ts  refactoring-engine.test.ts  test-engine.test.ts  universal-compiler.test.ts
src/__tests__/intelligence/: agent-framework.test.ts  knowledge-graph.test.ts  multi-agent-coordination.test.ts  probabilistic-systems.test.ts  reasoning-system.test.ts  unified-intelligence.test.ts
src/core/: event-bus.ts  event.rs  index.ts  kernel.ts  mod.rs  module.rs  scheduler.ts  stability.ts  state.rs  transition.rs  types.ts  verification.ts
src/core/category/: category.ts  correctness.ts  functor.ts  index.ts  limits.ts  monad.ts  natural-transformation.ts  product.ts  types.ts
src/core/graph/: dependency-graph.ts  event-graph.ts  index.ts  knowledge-graph.ts  metrics.ts  system-graph.ts  traversal.ts  types.ts
src/core/numerical/: ce-pipeline.ts  diagnostic-panel.ts  index.ts  nae.ts  types.ts
src/engineering/debugging/: debugger.ts
src/enhancements/: advanced-reasoning.ts  multimodal.ts  realtime-web.ts
src/substrates/: substrate-manager.ts
src/subsystems/: ai.rs  app.rs  data.rs  io.rs  mem.rs  mod.rs  net.rs  sys.rs  ui.rs
src/system/: main.ts
(+38 files in other folders)
